Module 5 complete: AI insights, reports download, dashboard enhancements